# simplex-noise

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  TODO.md  configure.ac  meson.build  meson.options  mkdocs.yml  requirements.txt  simplex_noise.pc.in
.github/workflows/: docs.yml  publish-pypi.yml
docs/: LICENSE.md  README.md  advanced-usage.md  api-reference.md  build-system.md  configuration.md  contributing.md  examples.md  getting-started.md  image-generation.md  overview.md  performance.md
examples/: example_2d.c  example_3d.c  example_config.c  example_fractal.c  example_image.c  meson.build
include/: simplex_image.h  simplex_noise.h
python/: .gitignore  setup.py  simplex_noise.py
python/examples/: basic_usage.py
scripts/: README.md  build-package.sh  build-python.sh  docs-deploy.sh  docs-serve.sh  fix-braces-systematic.py  fix-braces.py  fix-braces.sh  format-code.sh
src/: simplex_image.c  simplex_noise.c
tests/: meson.build  test_basic.c  test_config.c  test_performance.c
