option('simd',
  type: 'boolean',
  value: false,
  description: 'Enable SIMD optimizations'
)

option('profiling',
  type: 'boolean',
  value: false,
  description: 'Enable performance profiling'
)

option('tests',
  type: 'boolean',
  value: true,
  description: 'Build test programs'
)

option('examples',
  type: 'boolean',
  value: true,
  description: 'Build example programs'
)

option('docs',
  type: 'boolean',
  value: false,
  description: 'Build documentation'
)
